Details
-
Bug
-
Status: Closed
-
P2: Important
-
Resolution: Done
-
6.0.2
-
-
5a3ac0157c4b11d09bcbce3c59c3134ac119dd8c, 64e1ae71b35cfc3202f8dc876ca39f16207bf889
Description
When using a ShaderEffect which has been compiled with the qsb tool, it does not apply the effect at all. This works fine on macOS but not on Linux at least.
Attachments
For Gerrit Dashboard: QTBUG-92500 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
347033,2 | ShaderEffect docs: Clarify vertex output/input naming requirements | 6.1 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
347034,2 | rhi: gl: Sanity check vertex outputs and fragment inputs | 6.1 | qt/qtbase | Status: MERGED | +2 | 0 |
347062,2 | ShaderEffect docs: Clarify vertex output/input naming requirements | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
347065,2 | rhi: gl: Sanity check vertex outputs and fragment inputs | dev | qt/qtbase | Status: MERGED | +2 | 0 |